# open-canon-site

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  changelog.html  index.html  pyproject.toml
.github/ISSUE_TEMPLATE/: bugfix.md  feature-enhancement.md  request-new-text.md
.github/workflows/: ci.yml  cleanup-pr-previews.yml
1en/: index.html
1en/1en/: 1en-1.html  1en-10.html  1en-100.html  1en-101.html  1en-102.html  1en-103.html  1en-104.html  1en-105.html  1en-106.html  1en-107.html  1en-108.html  1en-11.html  1en-12.html  1en-13.html  1en-14.html  1en-15.html  1en-16.html  1en-17.html  1en-18.html  1en-19.html  1en-2.html  1en-20.html  1en-21.html  1en-22.html  1en-23.html  1en-24.html  1en-25.html  1en-26.html  1en-27.html  1en-28.html  1en-29.html  1en-3.html  1en-30.html  1en-31.html  1en-32.html  1en-33.html  (+75 more)
2en/: index.html
4macc/: index.html
adam-and-eve/: index.html
bom/: index.html
dc/: index.html
jub/: index.html
kjv-apocrypha/: index.html
letter-of-aristeas/: index.html
nt/: index.html
odes-of-solomon/: index.html
open-canon-osis-documents/: 1-adam-and-eve.xml  1-enoch.xml  2-adam-and-eve.xml  2-enoch.xml  4-maccabees.xml  adam-and-eve.xml  book_of_mormon.xml  doctrine_and_covenants.xml  jubilees.xml  kjv_apocrypha.xml  letter-of-aristeas.xml  new_testament.xml  odes-of-solomon.xml  pearl_of_great_price.xml  psalms-of-solomon.xml  story-of-ahikar.xml  testaments-twelve-patriarchs.xml  vita-adae-et-evae.xml
ot/: index.html
pgp/: index.html
psalms-of-solomon/: index.html
sample_data/: sample.osis.xml
static/: notes-sync.js  style.css
story-of-ahikar/: index.html
t12patr/: index.html
tests/: test_generator.py  test_parser.py  test_renderer.py
vita-adae-et-evae/: index.html
(+22053 files in other folders)
