[project]
name = "open-canon-site"
version = "0.1.0"
description = "Static site generator for OSIS XML scriptural documents"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = [
    "jinja2>=3.1.0",
    "pyosis>=0.2.1",
]

[project.scripts]
open-canon-site = "open_canon_site.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/open_canon_site"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
